feat: Add frame generation and enhance UE4 game compatibility
- Add frame generation settings (enabled/disabled, interpolation/extrapolation modes)
- Add frame skipping settings (enabled/disabled, adaptive/fixed modes)
- Implement frame skipping logic with adaptive and fixed modes
- Enhance UE4 crash handling with recovery mechanisms
- Add support for signed and float 32-bit image formats across shader backends
- Update Vulkan Validation Layers to v1.4.321.0
- Fix duplicate frame skipping options in Qt UI
- Improve memory handling for UE4 games (Hogwarts Legacy compatibility)
- Add enhanced bindless texture handling with fallback approach
- Update Android build configuration and dependencies

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -424,6 +424,7 @@
     <string name="astc_settings_header">ASTC Settings</string>
     <string name="advanced_graphics_header">Advanced Graphics</string>
     <string name="applet_settings_header">Applet Settings</string>
+    <string name="frame_generation_header">Frame Generation</string>
 
     <!-- Applet Mode Settings -->
     <string name="cabinet_applet_mode">Cabinet Applet Mode</string>
@@ -1226,5 +1227,22 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <string name="shader_backend_description">Controls which shader backend to use for rendering.</string>
     <string name="vram_usage_mode">VRAM Usage Mode</string>
     <string name="vram_usage_mode_description">Controls how aggressively VRAM is used. Conservative mode limits VRAM usage for better stability.</string>
+    <string name="frame_generation">Frame Generation</string>
+    <string name="frame_generation_description">Enables frame generation to create intermediate frames, potentially doubling the perceived frame rate.</string>
+    <string name="frame_generation_mode">Frame Generation Mode</string>
+    <string name="frame_generation_mode_description">Interpolation creates frames between existing ones, while Extrapolation predicts future frames.</string>
+    <string name="frame_generation_disabled">Disabled</string>
+    <string name="frame_generation_enabled">Enabled</string>
+    <string name="frame_generation_mode_interpolation">Interpolation</string>
+    <string name="frame_generation_mode_extrapolation">Extrapolation</string>
+    <string name="frame_skipping">Frame Skipping</string>
+    <string name="frame_skipping_description">Skips frames to maintain performance when the system cannot keep up with the target frame rate.</string>
+    <string name="frame_skipping_mode">Frame Skipping Mode</string>
+    <string name="frame_skipping_mode_description">Adaptive mode skips frames based on performance, while Fixed mode skips a specific number of frames.</string>
+    <string name="frame_skipping_disabled">Disabled</string>
+    <string name="frame_skipping_enabled">Enabled</string>
+    <string name="frame_skipping_mode_adaptive">Adaptive</string>
+    <string name="frame_skipping_mode_fixed">Fixed</string>
+    <string name="frame_skipping_header">Frame Skipping</string>
 
 </resources>
