android: Add configurable storage location with automatic data migration
Implement a storage location picker for Android that allows users to
choose where Citron stores game data, saves, and other files instead
of being locked to the default app-specific directory.

Features:
- Storage location selection during first-time setup
- Settings option to change storage location after initial setup
- Support for internal storage, external SD card, and custom locations
- Automatic data migration when changing storage locations
- Progress dialog with cancellation support during migration
- Proper app restart handling to apply new storage path
- Detailed logging for debugging storage initialization

The picker offers three main options:
1. Internal Storage (Default) - App-specific directory, removed on uninstall
2. External SD Card - Persistent storage with more space (if available)
3. Custom Location - User-selected folder via Storage Access Framework

When switching locations, all existing data (saves, keys, config, shaders)
is automatically copied to the new location, ensuring a seamless transition.

This addresses user requests to store data in more accessible locations
like SD cards or Downloads folders, especially useful for devices with
limited internal storage or for easier data backup.

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -83,6 +83,26 @@
     <string name="search_homebrew">Homebrew</string>
     <string name="open_user_folder">Open citron folder</string>
     <string name="open_user_folder_description">Manage citron\'s internal files</string>
+    <string name="change_storage_location">Change storage location</string>
+    <string name="change_storage_location_description">Choose where citron stores its data</string>
+    <string name="select_storage_location">Select Storage Location</string>
+    <string name="storage_picker_description">Choose where citron will store game data, saves, and other files. Changing this will require restarting the app.</string>
+    <string name="storage_location">Storage Location</string>
+    <string name="storage_location_description">Choose where to store your citron data</string>
+    <string name="storage_default">Internal Storage (Default)</string>
+    <string name="storage_default_description">Stored in app\'s directory on internal storage. Automatically removed when app is uninstalled.</string>
+    <string name="storage_external_sd">External SD Card</string>
+    <string name="storage_external_sd_description">Store data on your SD card. Persists after uninstall and provides more storage space.</string>
+    <string name="storage_custom">Custom Location (Advanced)</string>
+    <string name="storage_custom_description">Choose any accessible folder. Note: May require copying data manually.</string>
+    <string name="storage_location_changed">Storage location changed. Please restart citron for changes to take effect.</string>
+    <string name="restart_required">Restart Required</string>
+    <string name="restart_required_description">You\'ve changed the storage location. Please restart citron to apply changes.</string>
+    <string name="migrating_data">Migrating Data</string>
+    <string name="migration_complete">Data migration completed successfully!</string>
+    <string name="migration_cancelled">Data migration cancelled</string>
+    <string name="migration_failed">Data Migration Failed</string>
+    <string name="migration_failed_description">Failed to migrate data: %1$s\n\nYou may need to manually copy your data to the new location.</string>
     <string name="theme_and_color_description">Modify the look of the app</string>
     <string name="no_file_manager">No file manager found</string>
     <string name="notification_no_directory_link">Could not open citron directory</string>
