feat(android): add RomFS and ExeFS dumping support
Changes:
- Add JNI functions dumpRomFS() and dumpExeFS() in native.cpp
- Add Kotlin interface methods in NativeLibrary.kt
- Add UI options in GamePropertiesFragment for dumping
- Add string resources for dump operations
- Extract files to dump/{title_id}/romfs and dump/{title_id}/exefs
- Support patched and updated game content during extraction

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -145,6 +145,14 @@
     <string name="keys_missing">Encryption keys are missing</string>
     <string name="keys_missing_description">Firmware and retail games cannot be decrypted</string>
     <string name="keys_missing_help">https://discord.gg/citron</string>
+    <string name="dump_romfs">Dump RomFS</string>
+    <string name="dump_romfs_description">Extract the RomFS filesystem from the game</string>
+    <string name="dump_exefs">Dump ExeFS</string>
+    <string name="dump_exefs_description">Extract the ExeFS filesystem from the game</string>
+    <string name="dump_romfs_extracting">Extracting RomFS…</string>
+    <string name="dump_exefs_extracting">Extracting ExeFS…</string>
+    <string name="dump_success">Extraction completed successfully</string>
+    <string name="dump_failed">Extraction failed</string>
 
     <!-- Applet launcher strings -->
     <string name="applets">Applet launcher</string>
